# AudiPy-cicd-test

./: LICENSE  pyproject.toml
.github/workflows/: release.yaml
