[tool.poetry]
name = "AudiPy"
version = "0.3.0"
description = "Analyze data through audio."
authors = ["Nick <NickSetYourEmailHere@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "AudiPy"}]
homepage = "https://github.com/JustinEugene-CS/AudiPy"
repository = "https://github.com/JustinEugene-CS/AudiPy"
keywords = ["data","audio","analysis"]
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^1.3.0"
sounddevice = "^0.4.4"
scipy = "^1.7.0"
matplotlib = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-select = ["ANN2",
    "C4",
    "SIM",
    "B",
    "BLE",
    "ERA",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "RET",
    "RSE",
    "RUF",
    "S",
    "T20",
    "TID",
    "YTT",
    "W",
    "UP",
    "C90",
    "PD"]
ignore = [
    "E402",
    "B905",
    "N818",
    "S101",
    "N806",
    "B006",
    "RET505",
    "B008"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
show-fixes = true
target-version = "py310"
line-length = 158
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.per-file-ignores]
"**/*model*.py" = ["N805"]

[tool.isort]
profile = "black"
